# forkliftSafety

./: .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
config/: safetyvision.dev.yaml  safetyvision.raspberry.yaml  safetyvision.yaml
deploy/: README.md  safetyvision-record.service  safetyvision-sudoers  safetyvision-ui.service  safetyvision.service  setup_hotspot.sh  setup_pi.sh
deploy/hotspot/: setup_hotspot.sh
deploy/raspberry/: README.txt
docs/superpowers/specs/: 2026-04-16-distance-mode-design.md  2026-04-16-hailo-integration-design.md
scripts/: benchmark.py  calibrate_zones.py  record.sh  setup_system.sh
src/safetyvision/: __init__.py  config.py  supervisor.py  types.py
src/safetyvision/inference/: __init__.py  backends.py  hailo_backend.py
src/safetyvision/web/: app.py  calibration.py  thermal.py  thermal_monitor.py
src/safetyvision/web/static/css/: calibration.css  style.css
src/safetyvision/web/static/js/: app.js  calibration.js
src/safetyvision/web/templates/: calibration.html  index.html  login.html
src/safetyvision/workers/: alert.py  capture.py  decision.py  inference.py  metrics.py
src/safetyvision/zones/: __init__.py  bands.py  base.py  distance.py  factory.py
tests/: test_alert.py  test_calibration_validation.py  test_config.py  test_decision.py  test_inference.py  test_metrics.py  test_thermal.py  test_web.py  test_web_metrics.py  test_zones_bands.py  test_zones_distance.py  test_zones_factory.py
