[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safetyvision"
version = "0.2.0"
description = "Real-Time Forklift Safety System – Hailo-8L person detection with audio alerts"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "pyyaml>=6.0",
    "sounddevice>=0.4",
    "loguru>=0.7",
]

# Hailo runtime dependency (hailo_platform) is provided by the apt package
# 'hailo-all' on the target Pi, not installed via pip.

[project.optional-dependencies]
webui = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "httpx>=0.27",
    "ruff>=0.3",
]

[project.scripts]
safetyvision = "safetyvision.supervisor:main"
safetyvision-ui = "safetyvision.web.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"safetyvision.web" = ["templates/*.html", "static/**/*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
